# subsonicPy

./: README.md  pyproject.toml  subsonic.py
src/subsonicPy/: __init__.py  subsonic.py
src/subsonicPy_JSohn-1/: subsonic.py
subsonicPy/: README.md
subsonicPy/src/subsonicPy_JSohn-1/: subsonic.py
